# PythonLibs

odoo_module_writers_lib/: __init__.py  debug.py  domain.py  models.py  pyproject.toml  testing.py  util.py  webui.py
odoo_module_writers_lib/src/odoo_module_writers_lib/: dates.py  lowlevel.py
