[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo_module_writers_lib"
version = "0.0.1"
authors = [
  { name="João Jerónimo", email="joao.jeronimo.pro@gmail.com" },
]
description = "An auxilliary library for writing Odoo modules."
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LGPL",
    "Operating System :: Linux",
    "Operating System :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/joao-jeronimo/PythonLibs"
"Bug Tracker" = "https://github.com/joao-jeronimo/PythonLibs/issues"

